2011-02-08 v1.35 pjacklam ( tests)
  * Rename files for testing signature, module loading, and POD so the names
    are within the 8+3 character limit (Peter John Acklam).
  * Rename method _nok_ok() to the correct _nok(). There ought to have been a
    test catching an error like that (Peter John Acklam).
  * Fix _nok() giving wrong output when second input argument is zero
    (Peter John Acklam).
  * Fix _nok() so it doesn't modify its second input arg (Peter John Acklam).
  * Update the included Devel::CheckLib to most recent version as suggested in
    RE #63055 (Peter John Acklam).
  * Apply "chmod 0644" to the few test scripts that don't already have that
    mode (Peter John Acklam).

2011-02-07 v1.34 pjacklam (6361 tests)
  * Rename _num() to _str(). The old _num() did exactly what _str() is supposed
    to do, according to the API documentation (Peter John Acklam).
  * Add a _num() function which (currently) simply numifies the output from
    _str() (Peter John Acklam).
  * Clean up whitespace (Peter John Acklam).
  * Fix POD errors (Peter John Acklam).
  * Add _nok() method. Now the old claim that Math::BigInt::GMP conforms to API
    version 2 is actually true (Peter John Acklam).
  * Edit the test files that were copied from the Math::BigInt distribution, so
    we now test Math::BigInt against Math::BigInt::GMP, not Math::BigInt::Calc.
    I had forgotten this when I copied the test files from the Math::BigInt
    distribution. This reduces the total test count, since some test are not
    executed with Math::BigInt::GMP (Peter John Acklam).
  * Replace morse code in 'README' with proper text (Peter John Acklam).
  * Include '01-load.t' for explicitly testing module loading (Peter John
    Acklam).
  * Use more generic code in 'pod.t' and 'pod_cov.t' (Peter John Acklam).

2011-01-30 v1.33 pjacklam (6411 tests)
  * Fix _modinv() so that it works the same way as _modinv() in other
    Math::BigInt libraries: The output arguments are an object and the