@@ -5,5 +5,6 @@
 ^Makefile\z
 ^Makefile.(old|bak)\z
 .*\.patch\z
+^MYMETA\.yml\z
 pm_to_blib
 \.git
