@@ -1,12 +1,12 @@
 ---
 name: Math-BigInt-GMP
 author: Tels
-version: 1.35
+version: 1.36
 version_from: lib/Math/BigInt/GMP.pm
 license: perl
 distribution_type: module
-generated_by: Math-BigInt-GMP version 1.35
+generated_by: Math-BigInt-GMP version 1.36
 installdirs: site
 requires:
-  Math::BigInt: 1.9905
+  Math::BigInt: 1.993
   XSLoader: 0.02
