@@ -15,22 +15,22 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 70d6187d0152848c922dc4360fa6dd3a3dc35c62 BUGS
-SHA1 dcebbd9a2fe9012ac2be220dcf24374006aa77de CHANGES
+SHA1 684bfb3d30ecd94ea1bb4831417d06499216a6f5 CHANGES
 SHA1 dda5ca4f413031e9efcaa1600461d5e2adaa3a40 CREDITS
 SHA1 d7497d6d105042817c1734585be04ad2ebec4db2 GMP.xs
 SHA1 d6b7be7fb558f2df93e6bc55148bba35cae22ce4 INSTALL
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 3cbe75289e5d220085471ce02bb24a63c3ca68d7 MANIFEST
-SHA1 f3190cb30c8df53e0fd78658ff9a6132e031042e MANIFEST.SKIP
-SHA1 7f04596bd2fca2817176a47093615dac99ec89a1 META.yml
-SHA1 9a81d827fade77c53857a5f02bcd866b2083eae7 Makefile.PL
+SHA1 48395ac28095cb8ccc5c0472b6c8832a736d2f04 MANIFEST.SKIP
+SHA1 4d65fd904b9b6f45319cfbd1d596b05033d77f18 META.yml
+SHA1 58d9174aa185f266a7b476a00044967dbf3402ca Makefile.PL
 SHA1 ddef2225fa80a87f3138f23cb7fdbc8468c1f58f README
 SHA1 6c7207c83d636868d3d1f1fc42f3f9e5897cbe85 TODO
 SHA1 fd48d0d8750eb949e485d8136b5b424fe73e9775 build/README
 SHA1 7bcc4113830721ad6e37a1ea79df94a6987c836d build/leak.pl
 SHA1 ac25bda8a6eb9058a9e42a8943c3e11b9fed88dc build/leaktest
 SHA1 f68060b4838ade6c344ba7ee021ae83384ae9b11 inc/Devel/CheckLib.pm
-SHA1 ceb40c66bff7e43393eccba8e12107da3f872fc5 lib/Math/BigInt/GMP.pm
+SHA1 a45f8cdd371beaff0daae9c8bdd011f8213471eb lib/Math/BigInt/GMP.pm
 SHA1 6e9557e746e881ab1568cdcec17ff3c4f1508502 t/00sig.t
 SHA1 ab94a8c86b2b8fda2e02f9e3de43dff6186e65d3 t/01load.t
 SHA1 02ef05af53cb7378452590324bb21dfe61f44069 t/02pod.t
@@ -38,7 +38,7 @@ SHA1 ada3fcae2f9313cc97e0b999b13b30dac9a3deda t/03podcov.t
 SHA1 03a9a3dde7d4fcc3eb2e8f245ab0b0253f1d5821 t/bigfltpm.inc
 SHA1 01fd88632c91ab5a2d2f3e1cb21d6e8c87a76d0a t/bigfltpm.t
 SHA1 26c3ca060f6b7474ad8b2db3c1bae2b98e13adfd t/bigintg.t
-SHA1 b8a59928b5a605c24376d0a1bbb99b6061e511d8 t/bigintpm.inc
+SHA1 108a20412616ea34d67b93891383d47e3a619120 t/bigintpm.inc
 SHA1 3f2e0370b563a77accd7af70f1b284859cec5dd4 t/bigintpm.t
 SHA1 5bdf82ef7085b97caa496bfc71ab1fbfe48ef9e8 t/biglog.t
 SHA1 da260b6e02b220868fc7b4c0f87569299402fbf7 t/bigroot.t
@@ -48,7 +48,7 @@ SHA1 20cf43acc1a728d0ee8245b106937a2a97900266 typemap
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk1RTcgACgkQVQvyyU1bchqMpACfTMFWIoGi31sMEmxVnNa4FTH9
-JFMAniJUjIV4Qft8ZgGbEIF+BPLQMOFh
-=VYz0
+iEYEARECAAYFAk1pJMMACgkQVQvyyU1bchq/BwCePCqCU1e99JPUQ6527aE+1NyS
+AFsAn0U594jmOn3isVTrzlAAmVlnlPuu
+=WQWF
 -----END PGP SIGNATURE-----
