@@ -895,7 +895,7 @@ NaN:-inf:
 0b100000000000000000000000000000001:4294967297
 0b1000000000000000000000000000000001:8589934593
 0b10000000000000000000000000000000001:17179869185
-0b_101:NaN
+0b__101:NaN
 0b1_0_1:5
 0b0_0_0_1:1
 # hex input
@@ -908,7 +908,7 @@ NaN:-inf:
 0x12345678:305419896
 0x1_2_3_4_56_78:305419896
 0xa_b_c_d_e_f:11259375
-0x_123:NaN
+0x__123:NaN
 0x9:9
 0x11:17
 0x21:33
